examples/test/testpolicy8124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8124
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key34: value44
      key19: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value45
          key30: value2
          key2: value23
      podSelector:
        matchLabels:
          key41: value38
          key45: value33
          key46: value14
